# omni-secret-scanner

./: .gitignore  .gitlab-ci.yml.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  bitbucket-pipelines.yml.example  llms.txt  minimal_api.py  pyproject.toml  report.json  report.sarif  requirements.txt  scan-secrets.py  test_scanner.py
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile
scripts/: monitor.sh
src/omni_secret_scanner/: __init__.py  cli.py
src/omni_secret_scanner/config/: __init__.py  loader.py
src/omni_secret_scanner/detectors/: __init__.py  ast_filter.py  external.py  file_tree.py  git_history.py  nlp.py  parallel.py  perplexity.py  powershell.py  semgrep.py  snippet.py  stego.py  taint.py  watchdog.py
src/omni_secret_scanner/llm/: __init__.py  evidence.py  pipeline.py  profiler.py  scorer.py  state_machine.py  tools.py
src/omni_secret_scanner/patterns/: __init__.py  ai_keys.py  lang_rules.py  pii.py  secrets.py
src/omni_secret_scanner/reporters/: __init__.py  audit.py  base.py  html.py
src/omni_secret_scanner/tui/: __init__.py  app.py
src/omni_secret_scanner/utils/: __init__.py  decay.py  fix.py  git.py  homoglyph.py  mmap_io.py  redaction.py  validation.py
src/rgt_codebase_scanner/: __init__.py  cli.py
src/rgt_codebase_scanner/config/: __init__.py  loader.py
src/rgt_codebase_scanner/detectors/: __init__.py  ast_filter.py  external.py  file_tree.py  git_history.py  nlp.py  parallel.py  perplexity.py  powershell.py  snippet.py  stego.py  taint.py  watchdog.py
src/rgt_codebase_scanner/llm/: __init__.py  correlation.py  middleware.py  orchestrator.py  pipeline.py  prompts.py  router.py
src/rgt_codebase_scanner/patterns/: __init__.py  combined.py  injection.py  lang_rules.py  pii.py  secrets.py
src/rgt_codebase_scanner/reporters/: __init__.py  audit.py  base.py  html.py
src/rgt_codebase_scanner/targets/: __init__.py  resolver.py
src/rgt_codebase_scanner/tui/: __init__.py  app.py
src/rgt_codebase_scanner/utils/: __init__.py  cache.py  decay.py  entropy.py  fix.py  git.py  homoglyph.py  mmap_io.py  redaction.py  validation.py
tests/: conftest.py  test_scanner.py
