[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-secret-scanner"
version = "9.0.0"
description = "Enterprise-grade scanner for secrets, PII, high-entropy tokens, and prompt injection"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["security", "secrets", "pii", "scanner", "devsecops", "sast"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

# Core: stdlib-only — the scanner is fully functional with zero extra installs.
dependencies = []

[project.optional-dependencies]
progress = ["tqdm>=4.64.0"]
yaml = ["pyyaml>=6.0"]
nlp = [
    "text-deidentification>=1.0.0",
    "spacy>=3.5.0",
]
presidio = ["presidio-analyzer>=2.2.0"]
ast = ["tree-sitter>=0.20.0"]
all = [
    "tqdm>=4.64.0",
    "pyyaml>=6.0",
    "text-deidentification>=1.0.0",
    "spacy>=3.5.0",
    "presidio-analyzer>=2.2.0",
    "tree-sitter>=0.20.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[project.scripts]
omni-scan = "omni_secret_scanner.cli:entry_point"

[project.urls]
Homepage = "https://github.com/williamhudspeth/omni-secret-scanner"
Repository = "https://github.com/williamhudspeth/omni-secret-scanner"
"Bug Tracker" = "https://github.com/williamhudspeth/omni-secret-scanner/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# ---------------------------------------------------------------------------
# Ruff (linting + formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
